changed tool titles

--- a/phase2/dm-ph2.html
+++ b/phase2/dm-ph2.html
@@ -54,8 +54,7 @@
 				
 			</style>
 
-			<h1><p class="text-center">DMARC deployer</p></h1>
-			<h4><p class="text-center">Phase 2</p></h4>
+			<h1><p class="text-center">DMARC Monitor</p></h1>
 			<hr>
 			<div class="row" >
 
